# wikipedia-data-analysis

./: .gitignore  CLAUDE.md  PRD.md  pyproject.toml
patterns/: astronomy.txt  athletes.txt  battles_wars_conflicts.txt  biology.txt  businesspeople.txt  explorations_voyages_spacecraft.txt  explorers.txt  historians.txt  mathematics_statistics.txt  movie_directors_actors.txt  musicians_composers.txt  philosophers.txt  photographers.txt  politicians_rulers.txt  religious_figures.txt  scientists.txt  visual_artists.txt  writers_authors.txt
patterns/geo/: admin_subdivisions.txt  buildings_structures.txt  coastlines.txt  demographics_economy.txt  geographic_features.txt  historical_cultural.txt  lakes.txt  landforms.txt  landmarks.txt  mountain_ranges.txt  parks_protected.txt  peaks.txt  populated_places.txt  rivers.txt  transportation.txt
scripts/: benchmark_extraction.py  run_geo_integration.py  test_simplewiki_artists.py  transform_to_gadm.py
src/wiki_pipeline/: cache.py  category_tree.py  config.py  download.py  dump_reader.py  etymology_extractor.py  extractors.py  geo_infobox_parser.py  infobox_base.py  infobox_parser.py  llm_extractor.py  nlp_extractor.py  output.py  (+5 more)
tests/: conftest.py  test_cache.py  test_category_tree.py  test_config.py  test_download.py  test_dump_reader.py  test_etymology_extractor.py  test_extractors.py  test_geo_infobox_parser.py  test_infobox_parser.py  test_llm_extractor.py  test_nlp_extractor.py  test_output.py  test_page_filter.py  test_pipeline.py  test_run_geo_integration.py  test_sql_parser.py  test_transform.py  test_wiki_api.py
(+4 files in other folders)
